@@ -1,0 +1,4 @@
+<div id="{$itemName}-{$idItem}-tabcontainer" class="{$itemName}Tabs contentItemTabContainer">
+	{$tabHeads}
+	{$tabContents}
+</div>
